styles.css
:root {
  --primary-color: #a66ade;
  --secondary-color: #f5f2fe;
  --dark-color: #030407;
  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
}

body {
  margin: 0 auto;
  width: 100%;
}

.top {
  color: white;
  text-align: center;
  margin: 0;
}
.introduction-section {
  background-color: var(--dark-color);
}

h1,
.app-descriptions h2,
.tech-stack h2,
.app-h2 {
  font-family: "Aclonica", sans-serif;
}
h1,
h2,
h3 {
  text-align: center;
}
.app-h2 {
  font-size: 25px;
  margin-top: 20px;
}
.footer-heading {
  font-family: "Aclonica", sans-serif;
  font-size: 25px;
  display: inline;
  color: var(--secondary-color);
}

#navbar {
  background-color: var(--dark-color) !important;
  padding: 0px 10px !important;
}
.nav-link {
  color: rgb(152, 152, 152) !important;
}
.active {
  color: white !important;
}
#h1 {
  font-size: 96px;
  margin-bottom: 35px;
}

#h2 {
  font-size: 30px;
}
#post-contact,
#projects {
  font-size: 50px;
  font-family: "Aclonica", sans-serif;
  text-align: center;
}

#h3 {
  font-size: 20px;
  opacity: 0.7;
}
.app-card {
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.7);
}
.footer-info {
  background-color: var(--dark-color);
  display: flex;
  justify-content: space-between;
}
footer p {
  color: var(--secondary-color);
}
footer p,
footer a {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-size: 16px;
}
footer .container {
  margin: 0 auto;
  min-width: 100%;
  padding: 2rem 6rem;
}

footer i {
  color: var(--primary-color);
}

.footer-columns,
.footer-columns p {
  text-align: left;
  padding-right: 40px;
}
.useful-links a {
  display: block;
  text-decoration: none;
  color: var(--primary-color);
  padding-left: 20px;
  width: 200px;
}

.navigation-links {
  display: flex;
  margin-top: 40px;
  justify-content: center;
}

.navigation-links a,
.app-links a {
  margin: 20px;
  border-radius: 4px;
  padding: 20px 15px;
  text-decoration: none;
  text-transform: capitalize;
}
.app-links a {
  border-radius: 4px;
  padding: 20px 15px;
  text-decoration: none;
  text-transform: capitalize;
  margin-left: 0px;
}
.app-links {
  margin-top: 30px;
  margin-bottom: 45px;
}

.contact-link,
.individual-app-link {
  background: var(--primary-color);
  box-shadow: var(--box-shadow);
  color: white;
}
.contact-section {
  margin-top: 60px;
}
.about-link {
  color: var(--primary-color);
  border: 1px solid var(--primary-color);
}
.my-photo {
  width: 100%;
  height: 500px;
  object-fit: cover;
  object-position: bottom;
  border-radius: 15px;
}
.homepage-link {
  color: var(--primary-color);
  text-align: center;
  display: block;
}

.about-paragraphs {
  display: flex;
  margin: 15px 0;
}

.about-paragraphs p {
  margin: 10px;
  background-color: white;
}
.tech-stack {
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.7);
  margin: 0 auto;
  margin-top: 50px;
  padding: 20px 0px;
  border-radius: 15px;
  background-color: rgba(235, 212, 240, 0.892);
}
.email-link {
  display: flex;
  justify-content: center;
  color: var(--primary-color);
  font-size: 28px;
  text-decoration: none;
}

.email-link:hover {
  text-decoration: underline;
}
.app-sections {
  display: flex;
  justify-content: space-between;
}
.app-sections img {
  max-width: 400px;
  height: 300px;
  object-position: top;
  object-fit: cover;
  padding: 8px;
  box-shadow: var(--box-shadow);
  margin-bottom: 0px;
}

.container img {
  width: 100%;
}

.app-descriptions,
.app-descriptions h2 {
  text-align: left;
}
.about-text {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-size: 16px;
  text-align: center;
}
.my-photo {
  box-shadow: var(--box-shadow);
}
#about-main-heading {
  display: none !important;
}
.auto-type span {
  position: relative;
}
.auto-type span::before {
  content: "Front-end developer";
  color: var(--secondary-color);
  animation: words 20s infinite;
}
.auto-type span::after {
  content: "";
  background-color: var(--dark-color);
  position: absolute;
  width: calc(100% + 8px);
  height: 100%;
  border-left: 3px solid var(--dark-color);
  right: -8px;
  animation: cursor 0.6s infinite, typing 20s steps(14) infinite;
}
@keyframes cursor {
  to {
    border-left: 2px solid rgb(152, 152, 152);
  }
}
@keyframes words {
  0%,
  20% {
    content: "Front-end developer";
  }
  21%,
  40% {
    content: "Web developer";
  }
  41%,
  60% {
    content: "Software developer";
  }
  61%,
  80% {
    content: "Scientific researcher";
  }
  81%,
  100% {
    content: "Biologist";
  }
}
@keyframes typing {
  10%,
  15%,
  30%,
  35%,
  50%,
  55%,
  70%,
  75%,
  90%,
  95% {
    width: 0;
  }
  5%,
  20%,
  25%,
  40%,
  45%,
  60%,
  65%,
  80%,
  85% {
    width: calc(100% + 8px);
  }
}

.shapedivider {
  overflow: hidden;
  position: relative;
}
.shapedivider:before {
  content: "";
  position: absolute;
  bottom: -1px;
  left: -1px;
  right: -1px;
  top: -1px;
  z-index: 3;
  pointer-events: none;
  background-repeat: no-repeat;
  background-size: 143% 233px;
  background-position: 50% 0%;
  background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M0 .5c3.07.55 9.27-.42 16.14 0 6.88.4 13.75.57 19.14-.11V0H0z" fill="%23030407"/><path d="M0 1c3.17.8 7.29-.38 10.04-.55 2.75-.17 9.25 1.47 12.67 1.3 3.43-.17 4.65-.84 7.05-.87 2.4-.02 5.52.88 5.52.88V0H0z" opacity=".5" fill="%23030407"/><path d="M0 1.85c2.56-.83 7.68-.3 11.79-.42 4.1-.12 6.86-.61 9.58-.28 2.73.33 5.61 1.17 8.61 1 3-.19 4.73-.82 5.3-.84V.1H0z" opacity=".5" fill="%23030407"/></svg>');
}

@media (max-width: 768px) {
  .shapedivider::before {
    background-size: 100% 90px;
    background-position: 50% 0%;
  }
}
@media (min-width: 1025px) {
  .shapedivider::before {
    bottom: -0.1vw;
    left: -0.1vw;
    right: -0.1vw;
    top: -0.1vw;
    background-size: 143% 233px;
    background-position: 50% 0%;
    background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M0 .5c3.07.55 9.27-.42 16.14 0 6.88.4 13.75.57 19.14-.11V0H0z" fill="%23030407"/><path d="M0 1c3.17.8 7.29-.38 10.04-.55 2.75-.17 9.25 1.47 12.67 1.3 3.43-.17 4.65-.84 7.05-.87 2.4-.02 5.52.88 5.52.88V0H0z" opacity=".5" fill="%23030407"/><path d="M0 1.85c2.56-.83 7.68-.3 11.79-.42 4.1-.12 6.86-.61 9.58-.28 2.73.33 5.61 1.17 8.61 1 3-.19 4.73-.82 5.3-.84V.1H0z" opacity=".5" fill="%23030407"/></svg>');
  }
}
@media (min-width: 2100px) {
  .shapedivider::before {
    background-size: 143% calc(2vw + 233px);
  }
}

.shapedividerbottom {
  overflow: hidden;
  position: relative;
}
.shapedividerbottom::before {
  content: "";
  position: absolute;
  bottom: -1px;
  left: -1px;
  right: -1px;
  top: -1px;
  z-index: 3;
  pointer-events: none;
  background-repeat: no-repeat;
  background-size: 100% 59px;
  background-position: 50% 100%;
  background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M35.28 1.67c-3.07-.55-9.27.41-16.15 0-6.87-.4-13.74-.58-19.13.1v.4h35.28z" fill="%23030407"/><path d="M35.28 1.16c-3.17-.8-7.3.4-10.04.56-2.76.17-9.25-1.47-12.68-1.3-3.42.16-4.64.84-7.04.86C3.12 1.31 0 .4 0 .4v1.77h35.28z" opacity=".5" fill="%23030407"/><path d="M35.28.31c-2.57.84-7.68.3-11.8.43-4.1.12-6.85.61-9.57.28C11.18.69 8.3-.16 5.3.02 2.3.22.57.85 0 .87v1.2h35.28z" opacity=".5" fill="%23030407"/></svg>');
}

@media (min-width: 768px) {
  .shapedividerbottom::before {
    background-size: 100% 90px;
    background-position: 50% 0%;
  }
}

@media (min-width: 1025px) {
  .shapedividerbottom::before {
    bottom: -0.1vw;
    left: -0.1vw;
    right: -0.1vw;
    top: -0.1vw;
    background-size: 100% 59px;
    background-position: 50% 100%;
    background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M35.28 1.67c-3.07-.55-9.27.41-16.15 0-6.87-.4-13.74-.58-19.13.1v.4h35.28z" fill="%23030407"/><path d="M35.28 1.16c-3.17-.8-7.3.4-10.04.56-2.76.17-9.25-1.47-12.68-1.3-3.42.16-4.64.84-7.04.86C3.12 1.31 0 .4 0 .4v1.77h35.28z" opacity=".5" fill="%23030407"/><path d="M35.28.31c-2.57.84-7.68.3-11.8.43-4.1.12-6.85.61-9.57.28C11.18.69 8.3-.16 5.3.02 2.3.22.57.85 0 .87v1.2h35.28z" opacity=".5" fill="%23030407"/></svg>');
  }
}
@media (min-width: 2100px) {
  .shapedividerbottom::before {
    background-size: 100% calc(2vw + 59px);
  }
}
@media (max-width: 1025px) {
  .app-sections img {
    max-width: 400px;
    height: 300px;
  }
}
@media (max-width: 800px) {
  .app-sections img {
    max-width: 300px;
    height: 220px;
  }
}
@media (max-width: 576px) {
  #h1 {
    font-size: 45px;
    text-align: center;
  }

  .my-photo {
    max-height: 450px;
  }
  .about-shapedivider {
    padding-bottom: 90px !important;
  }
  #about-main-heading {
    display: block !important;
  }
  #about-second-heading {
    display: none !important;
  }
  #h2,
  #post-contact {
    font-size: 30px;
  }

  .email-link {
    font-size: 25px;
  }
  #navbar {
    padding-left: 0px !important;
    padding-right: 0px !important;
  }
  h3 {
    padding: 10px;
  }
  .container div,
  .container h2 {
    text-align: center;
  }
  .individual-app-link {
    width: 100%;
    display: block;
    margin: 5px 20px 20px 20px;
  }
}

